<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView android:text="@string/enter_driver_aadhar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="109dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/enter_text_label"
        android:textSize="20    sp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="12"
        android:id="@+id/aadhar_user_input_edittext"
        android:hint="@string/aadhar_format"
        android:layout_below="@+id/enter_text_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_journey_button"
        android:id="@+id/start_journey_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="118dp" />

</RelativeLayout>
