<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zephrys.auter.RideOnActivity.RideOnFragment">

    <ImageView
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="someimage" />

    <EditText
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:id="@+id/info_driver_edittext"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/ram_singh_chauhan"
        android:gravity="center"
        android:editable="false"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safely_reached"
        android:id="@+id/safe_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="63dp"
        android:layout_marginRight="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panic"
        android:id="@+id/panic_button"
        android:layout_alignTop="@+id/safe_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30sp"
        android:layout_marginBottom="63dp" />

</RelativeLayout>
